# Z-checker

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  createNewCase.sh  libtool
HDF5Reader/: Makefile.am  Makefile.in  Makefile.linux  Makefile.linux2  Makefile.osx  README.txt
HDF5Reader/include/: HDF5Reader.h  HDF5Selector.h
HDF5Reader/src/: HDF5Reader.c  HDF5Reader.h  HDF5Selector.c
HDF5Reader/test/: queryHDF5Fields.c  testHDF5_CompDecomp.c  testHDF5_CompDecomp_PropertyAnalysis.c  testHDF5_CompDecomp_SZ.c  testHDF5_CompDecomp_ZFP.c  test_HDF5Reader.c
HDF5Reader/test/testdata/: testdata.h5
NetCDFReader/: Makefile.am  Makefile.in  Makefile.linux  Makefile.osx
NetCDFReader/src/.deps/: libnetcdfreader_la-NetCDFReader.Plo
NetCDFReader/test/: extractNetCDFData.c  test_NetCDFReader.c
R/: Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.osx  README
R/src/: ZC_callR.c  ZC_callR.h  ZC_manyArgs.c  ZC_manyArgs.h
R/test/: SSIM_userguide.txt  ZC_rw.c  ZC_rw.h  data_analysis_script.R  func.R  test.sh  test_ZC_callR_x_1d.c  test_ZC_callR_x_2d.c  test_ZC_callR_x_3d.c  zccallr.c
cmake/: FindLevelDB.cmake  FindR.cmake  FindRocksDB.cmake  FindSZ.cmake
examples/: CMakeLists.txt  Makefile.am  Makefile.bk  Makefile.in  R2.txt  R3.txt  analyzeDataProperty.c  analyzeDataProperty.sh  analyzeDataProperty_multivars.c  analyzeDataProperty_online.c  compareDataSet.sh  compareDataSet_float.sh  compareDataSets.c  compareDataSets_online.c  createOfflineCase.sh  delCompressorZCConfig.c  derAnalyzer.cpp  env_config.sh  generateGNUPlot.c  generateReport.c  generateReport.sh  heatdis.c  heatdis_without_zserver.c  modifyZCConfig.c  multivars.txt  plot.sh  recompile.sh  runOfflineCase.c  setRScript.sh  sz.config  test-comparedata.sh  test-comparedata2.sh  test-dataProperty.sh  test-generateGNUPlot.sh  test.sh  testRscript_double.c  testRscript_float.c  testRscript_readBinFloat.c  testdouble_CompDecomp.c  testdouble_CompDecomp.sh  (+5 more)
examples/testdata/x86/: testdouble_8_8_128.dat.sz.out  testfloat_8_8_128.dat.sz.out
public/: charts.js  hacc.html  index.html  master.js  style.css
public/js/: client-legacy.js  client.js  client1.js  gui.js
template/: Makefile  elsarticle.cls  z-checker-report.tex
template/bib/: refs.bib
template/figs/: cratio_sz(1E-4)_zfp(1E-4).eps  cratio_sz(1E-5)_zfp(1E-5).eps  cratio_sz(1E-6)_zfp(1E-6).eps  cratio_sz(1E-7)_zfp(1E-7).eps
template/tex/: description.tex  metrics.tex  property.tex  results.tex
template/tex/resultsTex/: compressionFactor.tex  compressionRate.tex  decompressionRate.tex  errAutoCorr.tex  errDistribution.tex  overallRateDistortion.tex  psnr.tex  rateCorrelation.tex  rateDerivatives.tex  rateDerivativesSep.tex  rateDistortion.tex  specDistortion.tex
test/cunit-test/: Makefile.bk  README  test.sh  test_ByteToolkit  test_ByteToolkit.c  test_DynamicByteArray  test_DynamicByteArray.c  test_DynamicDoubleArray  test_DynamicDoubleArray.c  test_DynamicFloatArray  test_DynamicFloatArray.c  test_DynamicIntArray  test_DynamicIntArray.c  test_conf  test_conf.c  test_quicksort.c  test_rw.c  test_util.c
test/regression-test/: test.sh
zc/: CMakeLists.txt  Makefile.am  Makefile.in
zc/include/: CMakeLists.txt  DynamicIntArray.h  ZC_ByteToolkit.h  ZC_CompareData.h  ZC_DataProperty.h  ZC_DataSetHandler.h  ZC_FFTW3_math.h  ZC_HDF5Handler.h  ZC_Hashtable.h  ZC_LibpressioOpt.h  ZC_R_math.h  ZC_ReportGenerator.h  ZC_conf.h  ZC_gnuplot.h  ZC_latex.h  ZC_quicksort.h  ZC_rw.h  ZC_ssim.h  ZC_util.h  der.hpp  idx.hpp  latex.h  m_basic.hpp  m_der.hpp  m_der_metrics.hpp  m_norm.hpp  matrix.hpp  norm.hpp  others.hpp  rw.h  ssim.hpp  zc.h
zc/src/: ByteToolkit.c  CMakeLists.txt  DynamicDoubleArray.c  DynamicFloatArray.c  DynamicIntArray.c  ZC_ByteToolkit.c  ZC_CompareData.c  ZC_CompareData_double.c  ZC_CompareData_double.cpp  ZC_CompareData_float.c  ZC_CompareData_float.cpp  ZC_DataProperty.c  ZC_DataProperty_double.c  ZC_DataProperty_float.c  ZC_DataSetHandler.c  ZC_FFTW3_math.c  ZC_HDF5Handler.c  ZC_Hashtable.c  ZC_LibpressioOpt.c  ZC_R_math.c  ZC_ReportGenerator.c  ZC_conf.c  ZC_gnuplot.c  ZC_latex.c  ZC_quicksort.c  ZC_rw.c  ZC_ssim.c  ZC_util.c  conf.c  dictionary.c  gnuplot.c  iniparser.c  latex.c  rw.c  zc.c  zc_derivativeMetrics.cpp  zcf.c
zserver/: CMakeLists.txt  main.c  main.cpp  png_utils.hh  zserver.cpp  zserver.h
zserver/public/: index.html
zserver/public/js/: client.js  gui.js
